Bugfixes: >Tooltip position incorrect >No out of box click event listener >Cursor does not change to pointer

--- a/src/application/addons/projectBoard/Project.css
+++ b/src/application/addons/projectBoard/Project.css
@@ -18,3 +18,7 @@
 .hover-item:hover .hover-item-toolbar {
     visibility: visible;
 }
+
+.Button:hover {
+    cursor: pointer;
+}
